unpackaged/main/default/objects/JobOrderedPart__c/JobOrderedPart__c.object-meta.xml
<CustomObject>
    <description>Jobs and their related ordered parts. Jobs hold the responsibility</description>
    <label>Job Ordered Part</label>
    <nameField>
        <label>Job Ordered Parts Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Job Ordered Parts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>