unpackaged/main/default/objects/JobOrderedPart__c/fields/Customer_Part_ID__c.field-meta.xml
<CustomField>
    <fullName>Customer_Part_ID__c</fullName>
    <formula>OrderedPartId__r.CustomerPartID__c</formula>
    <label>Customer Part ID</label>
    <type>Text</type>
</CustomField>