unpackaged/main/default/objects/JobOrderedPart__c/fields/ERPJobId__c.field-meta.xml
<CustomField>
    <fullName>ERPJobId__c</fullName>
    <externalId>true</externalId>
    <label>ERP Job Id</label>
    <length>8</length>
    <type>Text</type>
</CustomField>