unpackaged/main/default/objects/JobOrderedPart__c/fields/ERPOrderedPartId__c.field-meta.xml
<CustomField>
    <fullName>ERPOrderedPartId__c</fullName>
    <externalId>true</externalId>
    <label>ERP Ordered Part Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>