unpackaged/main/default/objects/JobOrderedPart__c/fields/JobId__c.field-meta.xml
<CustomField>
    <fullName>JobId__c</fullName>
    <label>Job Id</label>
    <referenceTo>Job__c</referenceTo>
    <relationshipLabel>Job Ordered Parts</relationshipLabel>
    <relationshipName>Job_Ordered_Parts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>