unpackaged/main/default/objects/JobOrderedPart__c/fields/JobOrderedPartKey__c.field-meta.xml
<CustomField>
    <fullName>JobOrderedPartKey__c</fullName>
    <description>Job Id : Ordered Part Id</description>
    <label>Job Ordered Part Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>