unpackaged/main/default/objects/JobOrderedPart__c/fields/OrderedPartId__c.field-meta.xml
<CustomField>
    <fullName>OrderedPartId__c</fullName>
    <label>Ordered Part Id</label>
    <referenceTo>Ordered_Part__c</referenceTo>
    <relationshipLabel>Job Ordered Parts</relationshipLabel>
    <relationshipName>Job_Ordered_Parts</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>